--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "action": "^0.0.1",
     "axios": "^1.6.2",
     "gh-pages": "^6.1.0",
+    "github": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
