--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://SamiIlyas-Nouicer.github.io/quote-generator-react",
+  "homepage": "http://SamiIlyas-Nouicer.github.io/React-Quote-Generat",
   "name": "quote-generator",
   "private": true,
   "version": "0.0.0",
